...
                tonalElevation = 4.dp,
                shadowElevation = 8.dp,
                color = Color(0xFF075E54),
                modifier = Modifier
                    .fillMaxWidth()
                    .statusBarsPadding()
                    .testTag("chatTopBar")
            ) {
                Row(
                    modifier = Modifier
                        .padding(8.dp)
                        .fillMaxWidth(),
                    verticalAlignment = Alignment.CenterVertically,
...
                                }
                            }
                        ) {
                            Icon(Icons.Default.VideoCall, "Video Call", tint = Color.White)
                        }
                        IconButton(
                            modifier = Modifier.testTag("audioCallBtn"),
                            onClick = {
                                coroutineScope.launch {
                                    val callId = UUID.randomUUID().toString()
                                    callViewModel.initiateCall(receiverId, receiverName, callId)
                                    context.startActivity(
                                        Intent(context, CallActivity::class.java).apply {
...
