...
                    )
                    Spacer(modifier = Modifier.height(4.dp))
                    Text(
                        contactName,
                        color = Color.White,
                        style = MaterialTheme.typography.headlineMedium.copy(fontWeight = FontWeight.Bold),
                        modifier = Modifier.testTag("contactNameText")
                    )
                    Spacer(Modifier.height(50.dp))
                    IconButton(
                        onClick = { navController.popBackStack() },
                        modifier = Modifier
                            .size(90.dp)
                            .background(Color.Red, shape = CircleShape)
                            .testTag("endCallBtn")
                    ) {
                        Icon(
                            Icons.Default.CallEnd,
                            contentDescription = "End Call",
                            tint = Color.White,
                            modifier = Modifier.size(40.dp)
...
